# activity-manager

./: .taurignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  styles.css
.github/: CODEOWNERS
.github/WORKFLOWS/: build.yml  linux.yml  mac.yml  windows.yml
.github/workflows/: build.yml  linux.yml  mac.yml  windows.yml
macros/: Cargo.toml
macros/src/: lib.rs
migrations/2025-11-12-194014-0000_create_table/: up.sql
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/errors/: mod.rs  notification_error.rs  storage_error.rs
shared/src/models/: mod.rs  notification.rs  record.rs  storage_entry.rs
shared/src/style/: default_colors.rs  mod.rs
shared/src/utils/: normalize.rs
src/: app.rs  functions.rs  helper.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/: database.db
src-tauri/src/: lib.rs  main.rs
src-tauri/src/gateway/: mod.rs  notifications_gateway.rs
src-tauri/src/models/: record.rs
src-tauri/src/repository/: database_repository.rs  mod.rs  storage_repository.rs
src-tauri/src/schema/: schema.rs
src-tauri/src/service/: database_service.rs  mod.rs  notification_service.rs  storage_service.rs  stronghold_service.rs
src/components/atoms/: button.rs  color_picker.rs  edit_input.rs  mod.rs  select.rs  (+8 more)
src/errors/: form_error.rs  mod.rs  setting_error.rs
src/js/: pickr.mjs  variable_modify.js
src/models/: mod.rs  setting_value.rs  toast_notification_model.rs
src/utils/: concurrent_state.rs  functions.rs  helper.rs  logger.rs  mod.rs
(+13 files in other folders)
