[package]
name = "activity-manager-ui"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "shared",
    "src-tauri",
    "macros",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["HtmlInputElement"]}
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
shared ={ path = "./shared"}
i18nrs = { version = "0.1.7", features = ["yew"] }
uuid = { version = "1.18.1", features = ["v4"] }
